# task-manager

./: .project  pyproject.toml  test.db
backend/: database.py  main.py
backend/app/: database.py  models.py
backend/app/auth/: base_config.py  manager.py  models.py  schemas.py  services.py
backend/app/diet/: models.py  router.py  schemas.py
backend/app/foodstuffs/: models.py  router.py  schemas.py
backend/app/handlers/: auth.py  recipe.py
backend/app/operations/: models.py  router.py
backend/app/recipes/: models.py  router.py  schemas.py
backend/app/schemas/: auth.py  recipe.py
backend/app/services/: auth.py  recipe.py
frontend/pages/: router.py
frontend/templates/: base.html
migrations/: env.py
migrations/versions/: 2db160dba654_001_init.py  58acdf96c4c6_001_init.py  64c4af2a1b1a_001_init.py  db50e3313b3e_002_init.py  fd34cbed3bde_001_init.py
