[tool.poetry]
name = "lesson_45_fastAPI"
version = "0.1.0"
description = ""
authors = ["Andry"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
sqlalchemy = "^2.0.31"
typing-extensions = "^4.12.2"
pydantic = {extras = ["email"], version = "^2.8.2"}
alembic = "^1.13.2"
passlib = "^1.7.4"
bcrypt = "4.1.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pyjwt = "2.8.0"
python-multipart = "^0.0.9"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
asyncpg = "^0.29.0"
aiosqlite = "^0.20.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
